--- a/JavaScript/컴포넌트.md
+++ b/JavaScript/컴포넌트.md
@@ -22,10 +22,7 @@
 
 - 사용자 눈 높아짐, 웹 복잡해짐, 다양한 컴포넌트들이 생김 => 구체적으로 표현해야함
 - 모바일 시대에 화면은 작아지고 추상화하고 캡슐화해서 보여줘야함 => 구성요소로 표현해야되는 것이 많아짐
-
 - [프론트엔드 개발자라면 반드시 알아두어야 할 32가지의 UI 요소](https://velog.io/@oneook/%ED%94%84%EB%A1%A0%ED%8A%B8%EC%97%94%EB%93%9C-%EA%B0%9C%EB%B0%9C%EC%9E%90%EB%9D%BC%EB%A9%B4-%EB%B0%98%EB%93%9C%EC%8B%9C-%EC%95%8C%EC%95%84%EB%91%90%EC%96%B4%EC%95%BC-%ED%95%A0-32%EA%B0%80%EC%A7%80%EC%9D%98-UI-%EC%9A%94%EC%86%8C-%EB%B2%88%EC%97%AD)
-
-- https://headlessui.com/
 
 ### headless component
 
@@ -35,5 +32,15 @@
 - 디자인 커스텀하기 좋음
 - 반응형에 따라 디자인이 달라지거나 기능 변경/추가가 많이 발생한다면 headless component를 쓰는게 유지보수에 좋음
 
+- https://headlessui.com/
+  - 테일윈드 개발진에서 만든 headless component 라이브러리
+
 ### SPA (Single Page Application)
 
+> 단일 페이지로 구성된 웹 애플리케이션
+
+
+
+
+
+- 컴포넌트에 도메인 이름을 넣으면 직관적이지 않고 찾기 어려워서 좋지 않음
